deploy: 4e5a04267627fa8948cfa2fa0dc3acf446e559f4

--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "66178c3e",
+   "id": "c64fa296",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19b409a6",
+   "id": "e69e9c9d",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d9593f8",
+   "id": "1fad67c5",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ec36054",
+   "id": "b4a65f3e",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3de0e5bc",
+   "id": "53107066",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0219e62",
+   "id": "37958cf3",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b09f97d4",
+   "id": "48fce48b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:11:39.399147Z",
-     "iopub.status.busy": "2025-01-30T14:11:39.398719Z",
-     "iopub.status.idle": "2025-01-30T14:11:42.550741Z",
-     "shell.execute_reply": "2025-01-30T14:11:42.550133Z"
+     "iopub.execute_input": "2025-01-30T14:17:16.719044Z",
+     "iopub.status.busy": "2025-01-30T14:17:16.718838Z",
+     "iopub.status.idle": "2025-01-30T14:17:20.170641Z",
+     "shell.execute_reply": "2025-01-30T14:17:20.170008Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1daf7492",
+   "id": "3bead97b",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16063e60",
+   "id": "c714d47d",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa0a4cea",
+   "id": "1fad9e83",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e4e5081",
+   "id": "39257c12",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6bdc4b5",
+   "id": "e85f69e0",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53dc3f94",
+   "id": "068a18dc",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65a00449",
+   "id": "7cb629f5",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef594e02",
+   "id": "30678515",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c6041314",
+   "id": "db12ddef",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:11:42.553186Z",
-     "iopub.status.busy": "2025-01-30T14:11:42.552734Z",
-     "iopub.status.idle": "2025-01-30T14:11:44.593513Z",
-     "shell.execute_reply": "2025-01-30T14:11:44.593000Z"
+     "iopub.execute_input": "2025-01-30T14:17:20.173164Z",
+     "iopub.status.busy": "2025-01-30T14:17:20.172657Z",
+     "iopub.status.idle": "2025-01-30T14:17:22.407399Z",
+     "shell.execute_reply": "2025-01-30T14:17:22.406830Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcca4ad1",
+   "id": "80657e1d",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5f0a870e",
+   "id": "17defb9d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:11:44.595638Z",
-     "iopub.status.busy": "2025-01-30T14:11:44.595164Z",
-     "iopub.status.idle": "2025-01-30T14:11:44.598794Z",
-     "shell.execute_reply": "2025-01-30T14:11:44.598303Z"
+     "iopub.execute_input": "2025-01-30T14:17:22.409319Z",
+     "iopub.status.busy": "2025-01-30T14:17:22.409130Z",
+     "iopub.status.idle": "2025-01-30T14:17:22.412421Z",
+     "shell.execute_reply": "2025-01-30T14:17:22.411767Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c25fff44",
+   "id": "b99b91c9",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "273a80f4",
+   "id": "0d7f49cd",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49acf4ba",
+   "id": "5399922a",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70c2c25f",
+   "id": "d7c2fb32",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "fc19eb8e",
+   "id": "e083486a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:11:44.600534Z",
-     "iopub.status.busy": "2025-01-30T14:11:44.600359Z",
-     "iopub.status.idle": "2025-01-30T14:11:44.645836Z",
-     "shell.execute_reply": "2025-01-30T14:11:44.645287Z"
+     "iopub.execute_input": "2025-01-30T14:17:22.414185Z",
+     "iopub.status.busy": "2025-01-30T14:17:22.414010Z",
+     "iopub.status.idle": "2025-01-30T14:17:22.459800Z",
+     "shell.execute_reply": "2025-01-30T14:17:22.459235Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3302b7da",
+   "id": "ec756a3d",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9a54d5b3",
+   "id": "8303c0f8",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:11:44.647772Z",
-     "iopub.status.busy": "2025-01-30T14:11:44.647569Z",
-     "iopub.status.idle": "2025-01-30T14:11:44.719215Z",
-     "shell.execute_reply": "2025-01-30T14:11:44.718658Z"
+     "iopub.execute_input": "2025-01-30T14:17:22.461875Z",
+     "iopub.status.busy": "2025-01-30T14:17:22.461411Z",
+     "iopub.status.idle": "2025-01-30T14:17:22.531110Z",
+     "shell.execute_reply": "2025-01-30T14:17:22.530491Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29877bbc",
+   "id": "064201f7",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feaf76f8",
+   "id": "ee5f3ab8",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "19560c4d",
+   "id": "86e98e1f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:11:44.721236Z",
-     "iopub.status.busy": "2025-01-30T14:11:44.720901Z",
-     "iopub.status.idle": "2025-01-30T14:11:44.749489Z",
-     "shell.execute_reply": "2025-01-30T14:11:44.748856Z"
+     "iopub.execute_input": "2025-01-30T14:17:22.533121Z",
+     "iopub.status.busy": "2025-01-30T14:17:22.532773Z",
+     "iopub.status.idle": "2025-01-30T14:17:22.562300Z",
+     "shell.execute_reply": "2025-01-30T14:17:22.561784Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12b7c11d",
+   "id": "64504085",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3719db83",
+   "id": "bb326fe5",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc9310fd",
+   "id": "d3949866",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "099eb91e",
+   "id": "1eb84bd7",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ec1e446",
+   "id": "4d6393a6",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "3738686d",
+   "id": "a78305c7",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:11:44.752045Z",
-     "iopub.status.busy": "2025-01-30T14:11:44.751619Z",
-     "iopub.status.idle": "2025-01-30T14:11:44.755948Z",
-     "shell.execute_reply": "2025-01-30T14:11:44.755313Z"
+     "iopub.execute_input": "2025-01-30T14:17:22.564410Z",
+     "iopub.status.busy": "2025-01-30T14:17:22.564041Z",
+     "iopub.status.idle": "2025-01-30T14:17:22.568114Z",
+     "shell.execute_reply": "2025-01-30T14:17:22.567512Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc74cebf",
+   "id": "59cec5e0",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5a485586",
+   "id": "dc36a13b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:11:44.757766Z",
-     "iopub.status.busy": "2025-01-30T14:11:44.757402Z",
-     "iopub.status.idle": "2025-01-30T14:11:44.760357Z",
-     "shell.execute_reply": "2025-01-30T14:11:44.759774Z"
+     "iopub.execute_input": "2025-01-30T14:17:22.569952Z",
+     "iopub.status.busy": "2025-01-30T14:17:22.569605Z",
+     "iopub.status.idle": "2025-01-30T14:17:22.572546Z",
+     "shell.execute_reply": "2025-01-30T14:17:22.572095Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a21962a4",
+   "id": "1d364d7f",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "954ab538",
+   "id": "d6b7d052",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:11:44.762161Z",
-     "iopub.status.busy": "2025-01-30T14:11:44.761827Z",
-     "iopub.status.idle": "2025-01-30T14:11:47.387791Z",
-     "shell.execute_reply": "2025-01-30T14:11:47.387220Z"
+     "iopub.execute_input": "2025-01-30T14:17:22.574195Z",
+     "iopub.status.busy": "2025-01-30T14:17:22.574036Z",
+     "iopub.status.idle": "2025-01-30T14:17:25.287369Z",
+     "shell.execute_reply": "2025-01-30T14:17:25.286749Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3313178b",
+   "id": "69604832",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f01b1633",
+   "id": "08c554a8",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "334723f5",
+   "id": "fdbc83e6",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab69f8a4",
+   "id": "adbe6e27",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0099b05d",
+   "id": "fda9d27a",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:11:47.390013Z",
-     "iopub.status.busy": "2025-01-30T14:11:47.389443Z",
-     "iopub.status.idle": "2025-01-30T14:11:47.393136Z",
-     "shell.execute_reply": "2025-01-30T14:11:47.392584Z"
+     "iopub.execute_input": "2025-01-30T14:17:25.289474Z",
+     "iopub.status.busy": "2025-01-30T14:17:25.289132Z",
+     "iopub.status.idle": "2025-01-30T14:17:25.292807Z",
+     "shell.execute_reply": "2025-01-30T14:17:25.292193Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7faff6d076a0>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7fce117d79c0>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "876e5c3b",
+   "id": "86ae45f8",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f34942cd",
+   "id": "d973065c",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "64bf7dbb",
+   "id": "d75d7ae2",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10f80380",
+   "id": "a4a123ae",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "51859d0a",
+   "id": "b27b11c3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:11:47.394912Z",
-     "iopub.status.busy": "2025-01-30T14:11:47.394606Z",
-     "iopub.status.idle": "2025-01-30T14:11:47.397544Z",
-     "shell.execute_reply": "2025-01-30T14:11:47.396936Z"
+     "iopub.execute_input": "2025-01-30T14:17:25.294746Z",
+     "iopub.status.busy": "2025-01-30T14:17:25.294392Z",
+     "iopub.status.idle": "2025-01-30T14:17:25.297552Z",
+     "shell.execute_reply": "2025-01-30T14:17:25.297091Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "64249fbc",
+   "id": "df91f76f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-01-30T14:11:47.399188Z",
-     "iopub.status.busy": "2025-01-30T14:11:47.398991Z",
-     "iopub.status.idle": "2025-01-30T14:11:48.466255Z",
-     "shell.execute_reply": "2025-01-30T14:11:48.465692Z"
+     "iopub.execute_input": "2025-01-30T14:17:25.299141Z",
+     "iopub.status.busy": "2025-01-30T14:17:25.298975Z",
+     "iopub.status.idle": "2025-01-30T14:17:26.389513Z",
+     "shell.execute_reply": "2025-01-30T14:17:26.388885Z"
     }
    },
    "outputs": [
